--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,17 @@
 language: ruby
 rvm:
   - ruby-head
+  - 2.0.0
   - 1.9.3
   - 1.9.2
   - rbx-19mode
   - jruby-head
-
+  - jruby-19mode
 matrix:
   allow_failures:
+    - rvm: ruby-head
     - rvm: rbx-19mode
     - rvm: jruby-head
-
+    - rvm: jruby-19mode
 before_install:
   - gem install bundler
