--- a/.travis.yml
+++ b/.travis.yml
@@ -2,19 +2,19 @@ language: ruby
 
 rvm:
   - ruby-head
-  - 2.0.0
+  - 2.2
+  - 2.1
+  - 2.0
   - 1.9.3
-  - 1.9.2
-  - rbx-nightly-19mode
+  - ruby-head
+  - rbx-2
   - jruby-head
-  - jruby-19mode
 
 matrix:
   allow_failures:
     - rvm: ruby-head
-    - rvm: rbx-nightly-19mode
+    - rvm: rbx-2
     - rvm: jruby-head
-    - rvm: jruby-19mode
 
 before_install:
   - gem install bundler
