Drop `validation` dependency, just depends only `eqq`!

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -816,6 +816,7 @@ Naming/MethodName:
   EnforcedStyle: 'snake_case'
   Exclude:
     - 'test/**/*'
+    - 'lib/striuct/classmethods/adjustment.rb'
 
 Naming/FileName:
   Enabled: true
