--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,9 +1,3 @@
-require:
-  - rubocop-rake
-  - rubocop-performance
-  - rubocop-rubycw
-  - rubocop-md
-
 AllCops:
   TargetRubyVersion: 2.7
   DisplayCopNames: true
@@ -11,6 +5,7 @@ AllCops:
     - '**/vendor/**/*'
     - 'pkg/**/*'
   NewCops: enable
+  SuggestExtensions: false
 
 Metrics:
   Enabled: false
@@ -38,19 +33,8 @@ Style:
 Bundler:
   Enabled: true
 
-Rake:
-  Enabled: true
-
-Rake/Desc:
-  Enabled: false
-
 Gemspec:
   Enabled: true
-
-Performance:
-  Enabled: true
-  Include:
-    - 'lib/**/*'
 
 Style/Alias:
   Enabled: false
@@ -929,16 +913,3 @@ Lint/EmptyBlock:
 Lint/EmptyClass:
   Exclude:
     - 'example/**/*'
-
-Rubycw/Rubycw:
-  Enabled: true
-  Include:
-    - '**/*.rb'
-    - 'Rakefile'
-    - 'Steepfile'
-    - 'bin/**/*'
-    - 'exe/**/*'
-
-Markdown:
-  WarnInvalid: true
-  Autodetect: true
