--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,13 +1,13 @@
 version: 2
 updates:
-  - package-ecosystem: "github-actions"
-    directory: "/"
+  - package-ecosystem: 'github-actions'
+    directory: '/'
     schedule:
-      interval: "weekly"
-  - package-ecosystem: "bundler"
-    directory: "/"
+      interval: 'weekly'
+  - package-ecosystem: 'bundler'
+    directory: '/'
     schedule:
-      interval: "monthly"
+      interval: 'monthly'
     versioning-strategy: increase
     ignore:
       - dependency-name: 'rubocop'
