--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,6 +4,8 @@ updates:
     directory: '/'
     schedule:
       interval: 'weekly'
+    ignore:
+      - dependency-name: 'crate-ci/typos'
   - package-ecosystem: 'bundler'
     directory: '/'
     schedule:
