Suppress `Style/SingleLineDoEndBlock` in tests
https://github.com/rubocop/rubocop/pull/12227

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -53,6 +53,11 @@ Style/MethodDefParentheses:
 Style/TrailingCommaInBlockArgs:
   Enabled: true
 
+Style/SingleLineDoEndBlock:
+  Enabled: true
+  Exclude:
+    - 'test/**/*'
+
 Style/StringLiterals:
   Enabled: true
   EnforcedStyle: 'single_quotes'
