--- a/.github/workflows/update-flake-lock-and-ci.yml
+++ b/.github/workflows/update-flake-lock-and-ci.yml
@@ -15,6 +15,11 @@ jobs:
     if: (github.event.sender.login == 'kachick') || (github.event_name != 'pull_request')
     with:
       dry-run: ${{ github.event_name == 'pull_request' }}
+      optional-run: |
+        nix develop --command ruby -e 'puts RUBY_VERSION' > .ruby-version
+        # https://stackoverflow.com/q/34807971
+        git update-index -q --really-refresh
+        git diff-index --quiet HEAD || git commit -m 'Update .ruby-version' .ruby-version
     secrets:
       APP_ID: ${{ secrets.APP_ID }}
       APP_PRIVATE_KEY: ${{ secrets.APP_PRIVATE_KEY }}
